Versão com Comentários

--- a/index.html
+++ b/index.html
@@ -108,7 +108,17 @@
                     <img src="imagens/responde.png">
                     <p>Curtido por <strong>respondeai</strong> e <strong>outras 101.523 pessoas</strong></p>
                 </div>
+
                 <div class="commentSection">
+                    <div class="comments">
+                        <p class="infoPrin">sevelyn_art</p>
+                        <p class="comment">Look at the bear peacefully strolling! How cute!</p>
+                    </div>
+
+                    <ion-icon name="heart-outline"></ion-icon>
+                </div>
+
+                <div class="commentInput">
                     <ion-icon name="happy-outline"></ion-icon>
                     <input type="text" placeholder="Adicione um comentário...">
                     <button>Publicar</button>
@@ -137,7 +147,17 @@
                     <img src="imagens/adorable.jpg">
                     <p>Curtido por <strong>adorable_animals</strong> e <strong>outras 99.159 pessoas</strong></p>
                 </div>
+
                 <div class="commentSection">
+                    <div class="comments">
+                        <p class="infoPrin">zeptun_ix</p>
+                        <p class="comment">He looks just my dog, Spark!</p>
+                    </div>
+
+                    <ion-icon name="heart-outline"></ion-icon>
+                </div>
+
+                <div class="commentInput">
                     <ion-icon name="happy-outline"></ion-icon>
                     <input type="text" placeholder="Adicione um comentário...">
                     <button>Publicar</button>
@@ -166,7 +186,17 @@
                     <img src="imagens/responde.png">
                     <p>Curtido por <strong>respondeai</strong> e <strong>outras 101.523 pessoas</strong></p>
                 </div>
+                
                 <div class="commentSection">
+                    <div class="comments">
+                        <p class="infoPrin">im_stoic</p>
+                        <p class="comment">That cat's eyes are so ensnaring, like he's staring into my soul.</p>
+                    </div>
+
+                    <ion-icon name="heart-outline"></ion-icon>
+                </div>
+
+                <div class="commentInput">
                     <ion-icon name="happy-outline"></ion-icon>
                     <input type="text" placeholder="Adicione um comentário...">
                     <button>Publicar</button>
@@ -264,8 +294,6 @@
                 </div>
             </div>
         </section>
-
-        
     </div>
 
     <section>
