correção imagem razoes para acreditar

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 
                         <div class="infoSuggest">
                             <p class="infoPrin">razoesparaacreditar</p>
-                            <p class="infoSec">Segue você</p>
+                            <p class="infoSec">Novo no Instagram</p>
                         </div>
 
                         <div class="infoSuggestFollow">
